# skqudit

./: .gitignore  LICENSE  README.md  pyproject.toml  requirments.txt
notebooks/: tutorial.ipynb
src/skqudit/: __init__.py  buckets.py  gates.py  net.py  search.py  sk.py  utils.py
tests/: test_buckets.py  test_gates.py  test_net.py  test_sk.py  test_utils.py
