[project]
name = "skqudit"
description = "Solovay-Kitaev for qudits with LSH acceleration"
version = "0.0.1"
authors = [
    { name = "Henrique Ennes", email = "hlovisiennes@gmail.com" }
]
dependencies = [
    "scipy>=1.17",
    "numpy>=2.0",
    "matplotlib>=3.10"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["skqudit"]
